###### 1.8.0


###### 1.7.3
* Display appropiate icons in message dialogs.

###### 1.7.2
* Fixed the issue when using '_' in the ICU codes in CanSetLanguage and SetLanguage functions.

###### 1.7.1
* Fixed the issue when CSV uses '_' in the ICU code instead of '-' as Unreal supports only '-' when switching localizations.

###### 1.7.0
* Option to change column separator added.
* Removed Unreal CSV Parser as it was not used and was not compatible with the rest of the plugin.
* Put UE4.27 compatible Widget back.
* Minor fixes in comments and readme.

###### 1.6.0
* Option to import multiple CSV files with single import added.
* Option to display additional log information when importing added.

###### 1.5.8
* fixed deprecation warnings for UE5.5

###### 1.5.7
* uplugin updates to support FAB

###### 1.5.6
* Moved editor config to the default ini file. The project based ini file edition doesn't work for UE5.4.

###### 1.5.5
* Fixed the issue which was causing the whole editor localizations to change when changing the language in PIE.

###### 1.5.4
* Fixed the location of the open ELT window option for UE5.4
* Fixed few issues related to the marketplace build.

###### 1.5.3
* Fixed the issue in UELTBlueprintLibrary::GetTextData because of which it didn't return Package when Namespace was empty.

###### 1.5.2
* Deprecation fix for UE5.2 when disabling optimizations.

###### 1.5.1
* More readable blueprint node names.
* More error troubleshoots in readme.

###### 1.5.0
* "Replace Text" editor scripting utility function has been added.
* Copyrights date has been updated.

###### 1.4.1
* Fixed a rare issue where some texts weren't displayed as localized texts.
* "RefreshLanguageResources" function added to manually refresh current language resources if needed.
* Old, unused "FixupLoc" function has been removed.

###### 1.4.0
* "Manually Set Last Language" option added.
* Better error messages when importing CSV fails.